--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/ComprarEntrada.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/ComprarEntrada.cshtml
@@ -81,21 +81,21 @@
             <div class="row form-group">
                 <label for="" class="control-label col-md-3">Importe: </label>
                 <div class="col-md-4">
-                    <input type="text" class="form-control" placeholder="S/. 540" disabled>
+                    <input type="text" class="form-control" value="" disabled>
                 </div>
             </div>
 
             <div class="row form-group">
                 <label for="" class="control-label col-md-3">Descuento: </label>
                 <div class="col-md-4">
-                    <input type="text" class="form-control" placeholder="S/. 60" disabled>
+                    <input type="text" class="form-control" disabled>
                 </div>
             </div>
 
             <div class="row form-group">
                 <label for="" class="control-label col-md-3">Monto a Pagar: </label>
                 <div class="col-md-4">
-                    <input type="text" class="form-control" placeholder="S/. 490" disabled>
+                    <input type="text" class="form-control" value="" disabled>
                 </div>
             </div>
             <div class="row">
