--- a/WebApplication4/WebApplication4/Views/Evento/VerEvento.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/VerEvento.cshtml
@@ -132,16 +132,15 @@
                                             </select>
                                         </div>
                                     </div-->
-
-
-
                                     <div class="row form-group">
                                         <label for="hora" class="control-label col-md-4">Funciones:</label>
                                         <div id="funcion" class="col-md-8">
                                             <select id="funcionHora" class="form-control">
                                                 @for (int i = 0; i < ViewBag.ListFunciones.Count; i++)
                                                 {
-                                                    <option value="@ViewBag.ListFunciones[i].codFuncion"> @(  ((DateTime)ViewBag.ListFunciones[i].horaIni))</option>
+                                                    string fecha = String.Format("{0:d}",ViewBag.ListFunciones[i].fecha);
+                                                    string hora = String.Format("{0:t}",ViewBag.ListFunciones[i].horaIni);
+                                                    <option value="@ViewBag.ListFunciones[i].codFuncion"> @fecha - @hora</option>
                                                 }
                                             </select>
                                             @Html.ValidationMessageFor(model => model.idFuncion)
