--- a/WebApplication4/WebApplication4/Views/Evento/Comentarios.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/Comentarios.cshtml
@@ -29,6 +29,9 @@
 
 
                     <li class="list-group-item block-post">
+                        <span data-title="one toogle" class=" glyphicon glyphicon-pencil set-opts-btn  my-popover"></span>
+
+
                         @{
                             AjaxOptions options = new AjaxOptions();
                             options.HttpMethod = "POST";
@@ -372,6 +375,17 @@
 </script>
 
 <style>
+
+
+        .set-opts-btn{
+        float: right;
+        
+        
+        
+    }
+
+
+
     .form-post {
         width: 100%;
     }
