--- a/WebApplication4/WebApplication4/Views/Empleado/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Empleado/Index.cshtml
@@ -217,7 +217,7 @@
                         <div class="form-group">
                             @Html.LabelFor(model => model.Email, new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
-                                @Html.EditorFor(model => model.Email)
+                                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.Email)
                             </div>
                         </div>
@@ -225,7 +225,7 @@
                         <div class="form-group">
                             @Html.LabelFor(model => model.Password, new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
-                                @Html.EditorFor(model => model.Password)
+                                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.Password)
                             </div>
                         </div>
@@ -233,7 +233,7 @@
                         <div class="form-group">
                             @Html.LabelFor(model => model.ConfirmPassword, new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
-                                @Html.EditorFor(model => model.ConfirmPassword)
+                                @Html.EditorFor(model => model.ConfirmPassword, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.ConfirmPassword)
                             </div>
                         </div>
@@ -254,7 +254,7 @@
                         Value = "2"
                     });
                                 }
-                                @Html.DropDownListFor(model => model.tipoDoc, listItems, "Seleccione tipo de documento")
+                                @Html.DropDownListFor(model => model.tipoDoc, listItems, "Seleccione tipo de documento", new { @class = "form-control" })
                             </div>
 
                         </div>
@@ -262,7 +262,7 @@
                         <div class="form-group">
                             @Html.LabelFor(model => model.codDoc, new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
-                                @Html.EditorFor(model => model.codDoc)
+                                @Html.EditorFor(model => model.codDoc, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.codDoc)
                             </div>
                         </div>
@@ -270,7 +270,7 @@
                         <div class="form-group">
                             @Html.LabelFor(model => model.nombre, new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
-                                @Html.EditorFor(model => model.nombre)
+                                @Html.EditorFor(model => model.nombre, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.nombre)
                             </div>
                         </div>
@@ -278,7 +278,7 @@
                         <div class="form-group">
                             @Html.LabelFor(model => model.apellido, new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
-                                @Html.EditorFor(model => model.apellido)
+                                @Html.EditorFor(model => model.apellido, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.apellido)
                             </div>
                         </div>
@@ -286,7 +286,7 @@
                         <div class="form-group">
                             @Html.LabelFor(model => model.direccion, new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
-                                @Html.EditorFor(model => model.direccion)
+                                @Html.EditorFor(model => model.direccion, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.direccion)
                             </div>
                         </div>
@@ -294,7 +294,7 @@
                         <div class="form-group">
                             @Html.LabelFor(model => model.telefono, new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
-                                @Html.EditorFor(model => model.telefono)
+                                @Html.EditorFor(model => model.telefono, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.telefono)
                             </div>
                         </div>
@@ -302,15 +302,28 @@
                         <div class="form-group">
                             @Html.LabelFor(model => model.telMovil, new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
-                                @Html.EditorFor(model => model.telMovil)
+                                @Html.EditorFor(model => model.telMovil, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.telMovil)
                             </div>
                         </div>
 
-                        <div class="form-group">
+                        <div class="row form-group">
                             @Html.LabelFor(model => model.sexo, new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.sexo)
+                            <div class="col-md-7">
+                                @{
+                                    List<SelectListItem> listItemsS = new List<SelectListItem>();
+                                    listItemsS.Add(new SelectListItem
+                                    {
+                                        Text = "Masculino",
+                                        Value = "H",
+                                    });
+                                    listItemsS.Add(new SelectListItem
+                                    {
+                                        Text = "Femenino",
+                                        Value = "F"
+                                    });
+                                }
+                                @Html.DropDownListFor(model => model.sexo, listItemsS, new { @class = "form-control" })
                                 @Html.ValidationMessageFor(model => model.sexo)
                             </div>
                         </div>
@@ -318,7 +331,7 @@
                         <div class="form-group">
                             @Html.LabelFor(model => model.fechaNac, new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
-                                @Html.EditorFor(model => model.fechaNac)
+                                @Html.EditorFor(model => model.fechaNac, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.fechaNac)
                             </div>
                         </div>
@@ -355,37 +368,37 @@
                 {
                     @Html.AntiForgeryToken()
 
-                    <div class="form-horizontal">
-                        @Html.ValidationSummary(true)
-                        <h3>Datos de ingreso</h3><br>
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.Email, new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.Email)
-                                @Html.ValidationMessageFor(model => model.Email)
-                            </div>
-                        </div>
+    <div class="form-horizontal">
+        @Html.ValidationSummary(true)
+        <h3>Datos de ingreso</h3><br>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Email, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Email)
+            </div>
+        </div>
 
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.Password, new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.Password)
-                                @Html.ValidationMessageFor(model => model.Password)
-                            </div>
-                        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Password, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Password)
+            </div>
+        </div>
 
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.ConfirmPassword, new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.ConfirmPassword)
-                                @Html.ValidationMessageFor(model => model.ConfirmPassword)
-                            </div>
-                        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.ConfirmPassword, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.ConfirmPassword, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ConfirmPassword)
+            </div>
+        </div>
 
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.tipoDoc, new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @{
+        <div class="form-group">
+            @Html.LabelFor(model => model.tipoDoc, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @{
                     List<SelectListItem> listItems = new List<SelectListItem>();
                     listItems.Add(new SelectListItem
                     {
@@ -397,82 +410,95 @@
                         Text = "Pasaporte",
                         Value = "2"
                     });
-                                }
-                                @Html.DropDownListFor(model => model.tipoDoc, listItems, "Seleccione tipo de documento")
-                            </div>
+                }
+                @Html.DropDownListFor(model => model.tipoDoc, listItems, "Seleccione tipo de documento", new { @class = "form-control" })
+            </div>
 
-                        </div>
+        </div>
 
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.codDoc, new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.codDoc)
-                                @Html.ValidationMessageFor(model => model.codDoc)
-                            </div>
-                        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.codDoc, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.codDoc, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.codDoc)
+            </div>
+        </div>
 
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.nombre, new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.nombre)
-                                @Html.ValidationMessageFor(model => model.nombre)
-                            </div>
-                        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.nombre, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.nombre, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.nombre)
+            </div>
+        </div>
 
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.apellido, new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.apellido)
-                                @Html.ValidationMessageFor(model => model.apellido)
-                            </div>
-                        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.apellido, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.apellido, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.apellido)
+            </div>
+        </div>
 
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.direccion, new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.direccion)
-                                @Html.ValidationMessageFor(model => model.direccion)
-                            </div>
-                        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.direccion, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.direccion, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.direccion)
+            </div>
+        </div>
 
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.telefono, new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.telefono)
-                                @Html.ValidationMessageFor(model => model.telefono)
-                            </div>
-                        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.telefono, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.telefono, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.telefono)
+            </div>
+        </div>
 
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.telMovil, new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.telMovil)
-                                @Html.ValidationMessageFor(model => model.telMovil)
-                            </div>
-                        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.telMovil, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.telMovil, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.telMovil)
+            </div>
+        </div>
 
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.sexo, new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.sexo)
-                                @Html.ValidationMessageFor(model => model.sexo)
-                            </div>
-                        </div>
+        <div class="row form-group">
+            @Html.LabelFor(model => model.sexo, new { @class = "control-label col-md-2" })
+            <div class="col-md-7">
+                @{
+                    List<SelectListItem> listItemsS = new List<SelectListItem>();
+                    listItemsS.Add(new SelectListItem
+                    {
+                        Text = "Masculino",
+                        Value = "H",
+                    });
+                    listItemsS.Add(new SelectListItem
+                    {
+                        Text = "Femenino",
+                        Value = "F"
+                    });
+                }
+                @Html.DropDownListFor(model => model.sexo, listItemsS, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.sexo)
+            </div>
+        </div>
 
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.fechaNac, new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.fechaNac)
-                                @Html.ValidationMessageFor(model => model.fechaNac)
-                            </div>
-                        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.fechaNac, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.fechaNac, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.fechaNac)
+            </div>
+        </div>
 
-                        <div class="form-group">
-                            <div class="col-md-offset-2 col-md-10">
-                                <input type="submit" value="Agregar" class="btn btn-default" />
-                            </div>
-                        </div>
-                    </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Agregar" class="btn btn-default" />
+            </div>
+        </div>
+    </div>
                 }
             </div>
             <!--footer de la ventana-->
