--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/Politicas.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/Politicas.cshtml
@@ -7,15 +7,21 @@
     var db = new WebApplication4.Models.inf245netsoft();
     int p1 = 0, p2 = 0, p3 = 0, p4 = 0, p5 = 0, p6 = 0, p7 = 0;
     DateTime hr;
-    string pl6;
+    string pl6="--:-- ----";
     int a = 1, b = 2, c = 3, d = 4, e = 5, f = 6, g = 7;
-    p1 = (int)db.Politicas.Find(a).valor;
+    if (db.Politicas.Find(a).valor != null)
+    { 
+        p1 = (int)db.Politicas.Find(a).valor;
+    }
     p2 = (int)db.Politicas.Find(b).valor;
     p3 = (int)db.Politicas.Find(c).valor;
     p4 = (int)db.Politicas.Find(d).valor;
     p5 = (int)db.Politicas.Find(e).valor;
-    hr = (DateTime)db.HoraReserva.Find(f).hora;
-    pl6 = hr.ToString(@"hh\:mm\:tt");
+    HoraReserva horap = db.HoraReserva.Find(f);
+    if(horap.hora!=null){
+        hr = (DateTime)db.HoraReserva.Find(f).hora;
+        pl6 = hr.ToString(@"hh\:mm\:tt");
+    }
     p7 = (int)db.Politicas.Find(g).valor;
 }
 
@@ -48,7 +54,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-3 col-md-offset-1">
-                            <label for="">Duración de reserva: </label>
+                            <input type="radio" name="tipoRes" value="1"><label for="">Duración de reserva: </label>
                         </div>
                         <div class="col-md-3">
                             <div class="input-group">
@@ -62,7 +68,7 @@
                     </div> <br>
                     <div class="row">
                         <div class="col-md-3 col-md-offset-1">
-                            <label for="">Hora Limite de Reserva: </label>
+                            <input type="radio" name="tipoRes" value="2"><label for="">Hora Limite de Reserva: </label>
                         </div>
                         <div class="col-md-3">
                             <div class="input-group">
@@ -163,12 +169,25 @@
 
 <script>
     function registrar() {
-        var dur = $('#durR').val();
+        var tp = $('input[name="tipoRes"]:checked').val();
+        if (tp == undefined) {
+            var dur = "";
+            var hr = "";
+        }
+        if (tp == "1") {
+            var dur = $('#durR').val();
+        } else {
+            if (tp != undefined) var dur = "e";
+        }
         var mx = $('#maxC').val();
         var mt = $('#monT').val();
         var ra = $('#rAsg').val();
         var mE = $('#mxE').val();
-        var hr = $('#hora').val();
+        if (tp == "2") {
+            var hr = $('#hora').val();
+        } else {
+            if (tp != undefined) var hr = "e";
+        }
         //alert(dur);
         //alert(mx);
         //alert(mt);
