--- a/WebApplication4/WebApplication4/Views/Local/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Local/Index.cshtml
@@ -136,7 +136,7 @@
                     <div class="row form-group">
                         @Html.LabelFor(model => model.aforo, new { @class = "control-label col-md-3" })
                         <div class="col-md-9">
-                            @Html.EditorFor(model => model.aforo)
+                            @Html.EditorFor(model => model.aforo, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.aforo)
                         </div>
                     </div>
@@ -144,7 +144,7 @@
                     <div class="row form-group">
                         @Html.LabelFor(model => model.descripcion, new { @class = "control-label col-md-3" })
                         <div class="col-md-9">
-                            @Html.EditorFor(model => model.descripcion)
+                            @Html.EditorFor(model => model.descripcion, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.descripcion)
                         </div>
                     </div>
@@ -152,7 +152,7 @@
                     <div class="row form-group">
                         @Html.LabelFor(model => model.ubicacion, new { @class = "control-label col-md-3" })
                         <div class="col-md-9">
-                            @Html.EditorFor(model => model.ubicacion)
+                            @Html.EditorFor(model => model.ubicacion, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.ubicacion)
                         </div>
                     </div>
