--- a/WebApplication4/WebApplication4/Views/Regalo/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Regalo/Index.cshtml
@@ -213,7 +213,7 @@
                         <div class="row form-group">
                             @Html.LabelFor(model => model.nombre, new { @class = "control-label col-md-3" })
                             <div class="col-md-9">
-                                @Html.EditorFor(model => model.nombre)
+                                @Html.EditorFor(model => model.nombre, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.nombre)
                             </div>
                         </div>
@@ -221,7 +221,7 @@
                         <div class="row form-group">
                             @Html.LabelFor(model => model.descripcion, new { @class = "control-label col-md-3" })
                             <div class="col-md-9">
-                                @Html.EditorFor(model => model.descripcion)
+                                @Html.EditorFor(model => model.descripcion, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.descripcion)
                             </div>
                         </div>
@@ -229,7 +229,7 @@
                         <div class="row form-group">
                             @Html.LabelFor(model => model.puntos, new { @class = "control-label col-md-3" })
                             <div class="col-md-9">
-                                @Html.EditorFor(model => model.puntos)
+                                @Html.EditorFor(model => model.puntos, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.puntos)
                             </div>
                         </div>
